<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/profile_bg" android:id="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintDimensionRatio="16:9"
            android:scaleType="centerCrop"
    />
    <ru.skillbranch.devintensive.ui.custom.CircleImageView
            android:layout_width="@dimen/avatar_round_size"
            android:layout_height="@dimen/avatar_round_size" app:srcCompat="@drawable/avatar_default"
            android:id="@+id/iv_avatar"

            app:layout_constraintStart_toStartOf="@+id/imageView" app:layout_constraintEnd_toEndOf="parent"

            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
    />
    <ImageButton
            android:layout_width="@dimen/btn_round_size_40"
            android:layout_height="@dimen/btn_round_size_40" app:srcCompat="@drawable/ic_switch_day_night"
            android:id="@+id/btn_switch_theme"
            android:background="@drawable/btn_round_bg"
            app:layout_constraintEnd_toStartOf="@+id/iv_avatar" android:layout_marginEnd="32dp"
            app:layout_constraintTop_toTopOf="@+id/iv_avatar"
            app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"/>
    <ImageButton
            android:layout_width="@dimen/btn_round_size_40"
            android:layout_height="@dimen/btn_round_size_40" app:srcCompat="@drawable/ic_edit_black_24dp"
            android:id="@+id/btn_edit"
            android:background="@drawable/btn_round_bg" app:layout_constraintTop_toTopOf="@+id/iv_avatar"
            app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
            app:layout_constraintStart_toEndOf="@+id/iv_avatar" android:layout_marginStart="32dp"/>
    <TextView
            android:text="Junior Android Developer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tv_rank"
            style="@style/Profile.Header.Rank"
            app:layout_constraintTop_toBottomOf="@+id/tv_nick_name" app:layout_constraintEnd_toEndOf="@+id/tv_nick_name"
            app:layout_constraintStart_toStartOf="@+id/tv_nick_name"
    />

    <TextView
            android:text="John Doe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tv_nick_name"
            style="@style/Profile.Header.Nickname"
            app:layout_constraintEnd_toEndOf="@+id/iv_avatar"
            app:layout_constraintStart_toStartOf="@+id/iv_avatar" app:layout_constraintTop_toBottomOf="@+id/iv_avatar"
            android:layout_marginTop="8dp"/>
    <View
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/view" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" android:background="?colorAccentedSurface"/>
    <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="@+id/view"
            android:id="@+id/view2" app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintTop_toTopOf="@+id/view"
            app:layout_constraintBottom_toBottomOf="@+id/view" android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp" android:background="@color/color_divider_light"/>
    <TextView
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_rating" style="@style/Profile.Metrics.Value"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/view2" app:layout_constraintTop_toBottomOf="@+id/view"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintVertical_chainStyle="packed"/>
    <TextView
            android:text="@string/profile_label_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" style="@style/Profile.Metrics.Label"
            app:layout_constraintEnd_toEndOf="@+id/tv_rating" app:layout_constraintStart_toStartOf="@+id/tv_rating"
            app:layout_constraintTop_toBottomOf="@+id/tv_rating"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/view"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/textView5" style="@style/Profile.Metrics.Label"
            app:layout_constraintEnd_toEndOf="@+id/tv_respect"
            app:layout_constraintStart_toStartOf="@+id/tv_respect"
            app:layout_constraintTop_toBottomOf="@+id/tv_respect" tools:text="@string/profile_label_respect"/>
    <TextView
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:id="@+id/tv_respect" style="@style/Profile.Metrics.Value"
            app:layout_constraintBottom_toTopOf="@+id/textView5" app:layout_constraintTop_toTopOf="@+id/view2"
            app:layout_constraintStart_toEndOf="@+id/view2" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="@+id/view" android:layout_marginEnd="8dp"
            app:layout_constraintVertical_chainStyle="spread_inside"/>
    <ImageView
            android:layout_width="@dimen/btn_round_size_40"
            android:layout_height="@dimen/btn_round_size_40" app:srcCompat="@drawable/ic_avatar"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:id="@+id/imageView3"
            app:layout_constraintEnd_toStartOf="@+id/textInputLayout"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/view"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@+id/imageView3">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_hint_first_name" style="@style/Profile.EditText.Single"
                android:id="@+id/et_first_name"/>
    </com.google.android.material.textfield.TextInputLayout>
    <View
            android:layout_width="0dp"
            android:layout_height="1dp" android:id="@+id/v_divider"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
            android:background="?attr/colorDivider"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout2" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/wr_about"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" android:layout_marginTop="8dp"/>
    <View
            android:layout_width="0dp"
            android:layout_height="1dp" android:id="@+id/v_divider2"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
            android:background="?attr/colorDivider"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout2" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@id/wr_repository"
            app:layout_constraintTop_toBottomOf="@+id/wr_about" android:layout_marginTop="16dp"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" android:layout_marginStart="72dp"
            android:id="@+id/textInputLayout2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginTop="5dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_hint_last_name" style="@style/Profile.EditText.Single"
                android:id="@+id/et_last_name"/>
    </com.google.android.material.textfield.TextInputLayout>


    <ImageView
            android:layout_width="@dimen/btn_round_size_40"
            android:layout_height="@dimen/btn_round_size_40" app:srcCompat="@drawable/ic_about"
            android:id="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/wr_about" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toStartOf="@+id/wr_about" android:layout_marginEnd="16dp"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout2" android:id="@+id/wr_about"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            app:counterEnabled="true"
            app:counterMaxLength="128"
            android:layout_marginTop="5dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_hint_about" style="@style/Profile.EditText.MultiLine"

                android:id="@+id/et_about"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/wr_about"
            app:layout_constraintTop_toBottomOf="@+id/wr_about" android:id="@+id/wr_repository"
            app:errorEnabled="true"
            app:layout_constraintEnd_toStartOf="@+id/ic_eye" android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="5dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_hint_repository" style="@style/Profile.EditText.Single"
                android:id="@+id/et_repository"/>
    </com.google.android.material.textfield.TextInputLayout>
    <ImageView
            android:layout_width="@dimen/btn_round_size_40"
            android:layout_height="@dimen/btn_round_size_40" app:srcCompat="@drawable/ic_repo"
            android:id="@+id/imageView5" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/wr_repository"
            app:layout_constraintEnd_toStartOf="@+id/wr_repository" android:layout_marginEnd="16dp"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_eye_24dp"
            android:id="@+id/ic_eye" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/wr_repository"
            app:layout_constraintBottom_toBottomOf="@+id/wr_repository" android:layout_marginEnd="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>